--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-    <title>Todoist</title>
+    <title>DOIT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
